<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logoipb" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_application"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:gravity="center" />

    <EditText
        android:id="@+id/edtTextNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_nama_anda"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/edtTextUmur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_umur_anda"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/edtTextGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_gender_anda"
        android:layout_marginBottom="10dp" />


    <EditText
        android:id="@+id/edtTextAlamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_alamat_anda"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnEnter"
        android:text="@string/enter" />

</LinearLayout>